fixed a sign up prompt that covered the sign up form

--- a/src/react-components/Home/styles.css
+++ b/src/react-components/Home/styles.css
@@ -14,7 +14,7 @@
 }
 
 .signup_prompt {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     padding: 10px;
     width: 100%;
